# fastApiTest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py  router.py
app/api/v1/endpoints/: calculator.py  sample.py
app/core/: config.py
app/services/: calculator_service.py  jwt_service.py
tests/: test_calculator.py  test_jwt_service.py
